{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 497,
  "lineage": "009263a3-65b0-d106-2bc5-467557f390fe",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423386821:vpc/vpc-09772bcded7dee7c3",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04156aad7c959b387",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0165cfb3357b00c32",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09772bcded7dee7c3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0133f1008286019fb",
            "owner_id": "637423386821"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "georecord_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:loadbalancer/app/georecord/11046c4d5756a941",
            "arn_suffix": "app/georecord/11046c4d5756a941",
            "desync_mitigation_mode": "defensive",
            "dns_name": "georecord-131148961.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423386821:loadbalancer/app/georecord/11046c4d5756a941",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "georecord",
            "preserve_host_header": false,
            "security_groups": [
              "sg-030f6ec6b53292d1f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00d35906f581d0450"
              },
              {
                "subnet_id": "subnet-01e0172c9ced5ad2a"
              },
              {
                "subnet_id": "subnet-02f77904c99e003f0"
              },
              {
                "subnet_id": "subnet-07f2404b886199003"
              },
              {
                "subnet_id": "subnet-09541d75c05bf0bcc"
              },
              {
                "subnet_id": "subnet-0d8b9eb3e4d1ececd"
              }
            ],
            "subnets": [
              "subnet-00d35906f581d0450",
              "subnet-01e0172c9ced5ad2a",
              "subnet-02f77904c99e003f0",
              "subnet-07f2404b886199003",
              "subnet-09541d75c05bf0bcc",
              "subnet-0d8b9eb3e4d1ececd"
            ],
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            },
            "vpc_id": "vpc-09772bcded7dee7c3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.auth",
            "data.aws_subnets.ecs_subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "georecord_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Fixed response content",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:loadbalancer/app/georecord/11046c4d5756a941",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.georecord_lb",
            "aws_security_group.auth",
            "data.aws_subnets.ecs_subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:targetgroup/api-tg/e1dbd233e44330b4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener-rule/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4/9cc2b085a5a2e937",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener-rule/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4/9cc2b085a5a2e937",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4",
            "priority": 300,
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.georecord_lb",
            "aws_lb_listener.georecord_listener",
            "aws_lb_target_group.api_tg",
            "aws_security_group.auth",
            "data.aws_subnets.ecs_subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "auth_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:targetgroup/auth-tg/5e7e2e7a0e9afa86",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener-rule/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4/a0e3cd2bb52fa095",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/auth/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener-rule/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4/a0e3cd2bb52fa095",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4",
            "priority": 200,
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.georecord_lb",
            "aws_lb_listener.georecord_listener",
            "aws_lb_target_group.auth_tg",
            "aws_security_group.auth",
            "data.aws_subnets.ecs_subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:targetgroup/frontend-tg/ba6b1e4247d266a1",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener-rule/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4/e73c65ba4605a125",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener-rule/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4/e73c65ba4605a125",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4",
            "priority": 400,
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.georecord_lb",
            "aws_lb_listener.georecord_listener",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.auth",
            "data.aws_subnets.ecs_subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "user_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:targetgroup/user-tg/4bebd43af77e2165",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener-rule/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4/93a875dfa5f3278f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/user/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener-rule/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4/93a875dfa5f3278f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:listener/app/georecord/11046c4d5756a941/cc61ebe6d2f2c8d4",
            "priority": 201,
            "tags": null,
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.georecord_lb",
            "aws_lb_listener.georecord_listener",
            "aws_lb_target_group.user_tg",
            "aws_security_group.auth",
            "data.aws_subnets.ecs_subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:targetgroup/api-tg/e1dbd233e44330b4",
            "arn_suffix": "targetgroup/api-tg/e1dbd233e44330b4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "403",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423386821:targetgroup/api-tg/e1dbd233e44330b4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "api-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09772bcded7dee7c3"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "auth_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:targetgroup/auth-tg/5e7e2e7a0e9afa86",
            "arn_suffix": "targetgroup/auth-tg/5e7e2e7a0e9afa86",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "404",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423386821:targetgroup/auth-tg/5e7e2e7a0e9afa86",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "auth-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09772bcded7dee7c3"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:targetgroup/frontend-tg/ba6b1e4247d266a1",
            "arn_suffix": "targetgroup/frontend-tg/ba6b1e4247d266a1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "403",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423386821:targetgroup/frontend-tg/ba6b1e4247d266a1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09772bcded7dee7c3"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "user_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423386821:targetgroup/user-tg/4bebd43af77e2165",
            "arn_suffix": "targetgroup/user-tg/4bebd43af77e2165",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "403",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423386821:targetgroup/user-tg/4bebd43af77e2165",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "user-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09772bcded7dee7c3"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423386821:security-group/sg-098bfc65acf159571",
            "description": "Allow internal access to the RDS instance",
            "egress": [],
            "id": "sg-098bfc65acf159571",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow_db",
            "name_prefix": "",
            "owner_id": "637423386821",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            },
            "timeouts": null,
            "vpc_id": "vpc-09772bcded7dee7c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423386821:security-group/sg-01ac3c1c5e09549e6",
            "description": "api microservice Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ac3c1c5e09549e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "api",
            "name_prefix": "",
            "owner_id": "637423386821",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            },
            "timeouts": null,
            "vpc_id": "vpc-09772bcded7dee7c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423386821:security-group/sg-030f6ec6b53292d1f",
            "description": "Auth microservice Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030f6ec6b53292d1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "auth",
            "name_prefix": "",
            "owner_id": "637423386821",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            },
            "timeouts": null,
            "vpc_id": "vpc-09772bcded7dee7c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423386821:security-group/sg-06aa9fbc86f451a53",
            "description": "frontend microservice Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06aa9fbc86f451a53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "frontend",
            "name_prefix": "",
            "owner_id": "637423386821",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            },
            "timeouts": null,
            "vpc_id": "vpc-09772bcded7dee7c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423386821:security-group/sg-020ed69b732281423",
            "description": "user microservice Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020ed69b732281423",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "user",
            "name_prefix": "",
            "owner_id": "637423386821",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Automation": "Terraform",
              "Course": "CSSE6400",
              "Name": "GeoRecord"
            },
            "timeouts": null,
            "vpc_id": "vpc-09772bcded7dee7c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}